--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GITHUB_ISSUES_URL=https://api.github.com/repos/facebook/react/issues
+GITHUB_ISSUES_URL=https://api.github.com/repos/{AUTHOR}/{REPO}/issues
