--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.2.9",
     "date-fns": "^3.0.1",
     "framer-motion": "^10.16.16",
+    "iconsax-react": "^0.0.8",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
