--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
+#Note: These variables are typically confidential and should not be made public. However, for the purposes of this challenge, they have been included.
 GITHUB_ISSUES_URL=https://api.github.com/repos/{AUTHOR}/{REPO}/issues
+GITHUB_CONTRIBUTORS_URL=https://api.github.com/repos/{AUTHOR}/{REPO}/contributors
+GITHUB_LABELS_URL=https://api.github.com/repos/{AUTHOR}/{REPO}/labels
